1999-06-09	Thomas Dickey

        + suppress a blank line before #endif after a declaration, unless we're
	  putting blanks around preprocessor lines anyway.

	+ update the configure script (I was not able to build the original
	  program on SunOS 4.1.3 because of the memmove reference).

------------------------------------------------------------------------------
1998-12-02    <jla@void.arceneaux.com>

	* indent.c (need_chars): Changed this #define to an inline
	function.  Also, increase size of buffer by at least `needed'.

1998-11-25    <jla@void.arceneaux.com>

	* lexi.c (lexi): New case lable for 'L' in switch (*token) to
	handle wide strings.
	In the if statement for alphanums, fail the test if we are looking
	at L" or L'.
	* regression/TEST: added new test case wide.c to EXAMPLES.

1998-11-24    <jla@void.arceneaux.com>

	* indent.texinfo (Common styles): Corrected description of canned
	styles to correspond with args.c

	* makefile.in (TARFILES): Removed indent.1 from the list.

1998-11-23    <jla@void.arceneaux.com>

	* backup.c (make_backup): Removed #ifdef __MSDOS__, just declare
	size unsigned int in all cases.

1998-11-22    <jla@void.arceneaux.com>

	* All code now passes through gcc -Wall.

	* args.c: Removed unused variable `exp_troff'.

	* comments.c (print_comment): Removed unused label comment_exit.

	* io.c (dump_line): Removed unused label inhibit_newline.

	* makefile.in (indent.html): New target.

	* sys.h: Removed conditionals around `memcpy' function and define
	of `bcopy' to `memcpy'.  I will assume that memcpy is available,
	and see if it's problematic.
	* memcpy.c: Changed #ifdef USG to #ifndef HAVE_MEMCPY.

	* regression/TEST: added new test files bbb-test.c and
	class-func.cc.
	
	* comments.c (print_comment): Use new variable
	`comment_lines_count' to count lines in a boxed comment.  When
	printing a boxed comment, set `parser_state_tos->com_col' to
	`found_col' when returning from a single line boxed comment.
